<resources>
    <string name="app_name">TabNews</string>
    <string name="relevantes">Relevantes</string>
    <string name="recentes">Recentes</string>
    <string name="numeroConteudo">%1$d.</string>
    <string name="tabcoins">tabcoins</string>
    <string name="tabcash">tabcash</string>
    <string name="subtituloConteudo">%1$d · %2$s · %3$s · %4$s</string>
    <plurals name="tabcoinsPlural">
        <item quantity="zero">0 tabcoin</item>
        <item quantity="one">%1$d tabcoin</item>
        <item quantity="other">%1$d tabcoins</item>
    </plurals>
    <plurals name="comentariosPlural">
        <item quantity="zero">sem comentários</item>
        <item quantity="one">%1$d comentário</item>
        <item quantity="other">%1$d comentários</item>
    </plurals>
    <plurals name="horasPlural">
        <item quantity="zero">há pouco</item>
        <item quantity="one">%1$d hora atrás</item>
        <item quantity="other">%1$d horas atrás</item>
    </plurals>
    <plurals name="diasPlural">
        <item quantity="zero">hoje</item>
        <item quantity="one">ontem</item>
        <item quantity="many">alguns dias</item>
        <item quantity="other">%1$d dias atrás</item>
    </plurals>

    <string name="achei_relevante">Achei relevante</string>
    <string name="nao_achei_relevante">Não achei relevante</string>
    <string name="responder">Responder</string>
    <string name="entrar">Entrar</string>

    <!--  Login  -->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="novo_no_tabnews">Novo no TabNews?</string>
    <string name="crie_sua_conta">Crie sua conta aqui.</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="clique_aqui">Clique aqui.</string>
</resources>