<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/fundoToolbar"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/imvLogoApp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="8dp"
            android:src="@drawable/tabnews"/>

        <TextView
            android:id="@+id/txvRelevantes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/textoToolbar"
            android:background="@drawable/fundo_menu"
            android:text="@string/relevantes"
            android:layout_marginHorizontal="8dp"
            android:paddingVertical="6dp"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txvRecentes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/textoToolbar"
            android:background="@drawable/fundo_menu"
            android:text="@string/recentes"
            android:layout_marginHorizontal="8dp"
            android:paddingVertical="6dp"
            android:textStyle="bold"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/llTabinfos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:id="@+id/vTabcoins"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:background="@drawable/fundo_tabcoins"
                    app:layout_constraintBottom_toBottomOf="@+id/txvInfos"
                    app:layout_constraintStart_toStartOf="@+id/txvTitle"
                    app:layout_constraintTop_toTopOf="@+id/txvInfos" />

                <TextView
                    android:id="@+id/txvTabcoins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/textoToolbar"
                    tools:text="2"
                    android:layout_marginHorizontal="8dp"
                    android:textStyle="bold"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:id="@+id/vTabcash"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:background="@drawable/fundo_tabcash"
                    app:layout_constraintBottom_toBottomOf="@+id/txvInfos"
                    app:layout_constraintStart_toStartOf="@+id/txvTitle"
                    app:layout_constraintTop_toTopOf="@+id/txvInfos" />

                <TextView
                    android:id="@+id/txvTabcash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/textoToolbar"
                    tools:text="4"
                    android:layout_marginHorizontal="8dp"
                    android:lineHeight="10dp"
                    android:textStyle="bold"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txvEntrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:layout_gravity="end"
            android:textColor="?attr/textoToolbar"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginEnd="16dp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srlConteudos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvConteudos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            tools:itemCount="10"
            tools:listitem="@layout/item_conteudo" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/txvFalha"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>